# VideoEncoder

./: CMakeLists.txt  Makefile  README.md  loadwasm.js  package-lock.json  package.json  run_cmake_webassembly_Release.sh  x264.js  x264.wasm
demo/: index.html
lib/: video-encoder.js  videoencoder.js
src/: index.js  utils.js
x264_encoder/: CMakeLists.txt  Makefile
x264_encoder/lib/: encoder.js
x264_encoder/src/: encoder.cpp
