cmake_minimum_required (VERSION 3.8)

project(X264Encoder)

set(CMAKE_CXX_STANDARD 11)

set(TARGET X264Encoder)

set(SrcDir ${CMAKE_CURRENT_SOURCE_DIR}/src)
file(GLOB_RECURSE WebFiles    ${SrcDir}/*.*)


set(SrcFiles 
    ${SrcDir}/encoder.cpp
)

# 指定生成目标
add_executable(${TARGET} ${SrcFiles})

target_include_directories(${TARGET}
    PRIVATE 
    "${CMAKE_CURRENT_LIST_DIR}/thirdparty/x264/include"
)

target_link_libraries(${TARGET}
    PRIVATE 
    ${CMAKE_CURRENT_LIST_DIR}/thirdparty/x264/lib/libx264.a
)

set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} --bind")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -msse4.1 -msimd128")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s USE_ES6_IMPORT_META=0")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s EXPORT_ES6=1")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s ENVIRONMENT=web")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s ALLOW_MEMORY_GROWTH=1")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s INVOKE_RUN=0")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s ASSERTIONS=0")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s SUPPORT_LONGJMP=0")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s DYNAMIC_EXECUTION=0")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s FILESYSTEM=0")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -s WARN_ON_UNDEFINED_SYMBOLS=0")
set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -O2")

set_target_properties(${TARGET} PROPERTIES 
    LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS}"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)